src/test/ui/associated-types/associated-types-issue-20346.stderr
error[E0271]: type mismatch resolving `<Adapter<I> as Iterator>::Item == std::option::Option<T>`
  --> $DIR/associated-types-issue-20346.rs:34:5
   |
LL | fn is_iterator_of<A, I: Iterator<Item=A>>(_: &I) {}
   |                                  ------ required by this bound in `is_iterator_of`
...
LL | fn test_adapter<T, I: Iterator<Item=Option<T>>>(it: I) {
   |                 - this type parameter
...
LL |     is_iterator_of::<Option<T>, _>(&adapter);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected enum `std::option::Option`, found type parameter `T`
   |
   = note: expected enum `std::option::Option<T>`
              found type `T`
   = help: type parameters must be constrained to match other types
   = note: for more information, visit https://doc.rust-lang.org/book/ch10-02-traits.html#traits-as-parameters

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
